[package]
name = "langtons-ant"
version = "0.1.0"
authors = ["Markus Diewald <mdiewald@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[features]
btree_map = []

[dependencies]
fnv = "1.0.3"
metered = "0.3.0"
